--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,19 +106,21 @@ ul {
 	letter-spacing: 0.5px;
 	font-weight: 600;
 	cursor: pointer;
-	height: 3rem;
-	line-height: 2.9rem;
-	width: calc(100px + 3vw);
 	background-color: transparent;
-	border-radius: 4px;
+	border-radius: 8px;
 	text-align: center;
-	margin: 1rem auto;
+	margin: auto;
 	backface-visibility: hidden;
 	transition: 0.3s ease-in-out;
 	text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
 	color: rgb(15, 98, 146);
 	border: solid 2px rgb(15, 98, 146);
-	font-size: calc(0.8rem + 0.2vw);
+	font-size: calc(0.7rem + 0.3vw);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: .66rem; 
+	min-width: 6rem;
 }
 
 /* 
